# LogRocket-Playwright

./: .env.example  .gitignore  GUIDE.md  README.md  pyproject.toml
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/flows/: page.tsx
frontend/app/flows/[name]/: page.tsx
frontend/app/generate/: page.tsx
frontend/app/record/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/tests/: page.tsx
frontend/components/: app-shell.tsx  flow-runtime-panel.tsx  flow-search-select.tsx  flows-explorer.tsx  job-monitor.tsx  play-flow-button.tsx  test-run-history.tsx  test-runner-panel.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  textarea.tsx
frontend/lib/: api.ts  brand.ts  utils.ts
scripts/: run-web.sh
src/e2e_from_logrocket/: __init__.py  agent_defs.py  agents.py  api_cli.py  cli.py  config.py  dashboard.py  dashboard_cli.py  dashboard_data.py  dashboard_entry.py  fixture_recorder.py  flow_index.py  flow_runtime.py  models.py  pipeline.py  playwright_emitter.py  prompts.py  record_fixtures.py  schemas.py  test_results_store.py  test_runner.py
src/e2e_from_logrocket/api/: __init__.py  jobs.py  main.py  settings_service.py
src/e2e_from_logrocket/pii/: __init__.py  sanitizer.py
